Nuevo routing con angular-route-segment terminado. Ahora tenemos dos niveles de segmentos en los que mostrar vistas: uno para las secciones principales y otro para las secciones hijas de las principales.

--- a/app/views/Pelis.html
+++ b/app/views/Pelis.html
@@ -1,5 +1,10 @@
-
-<h2>Películas</h2>
-
-<span>{{ movie.title }}</span>
-<span>{{ movie.year }}</span>
+<!-- Navegación de la sección Películas -->
+<nav>
+    <ul class="nav nav-tabs">
+        <li>
+            <a href="#/pelis/proximamente">Próximamente</a>
+        </li>
+    </ul>
+</nav>
+<!-- Segmento donde se muestran las subvistas de Películas -->
+<section app-view-segment="1"></section>
