--- a/app/views/Series.html
+++ b/app/views/Series.html
@@ -1,5 +1,10 @@
-
-<h2>Series</h2>
-
-<span>{{ serie.title }}</span>
-<span>{{ serie.year }}</span>
+<!-- Navegación de la sección Series -->
+<nav>
+    <ul class="nav nav-tabs">
+        <li>
+            <a href="#/series/hoy">Hoy</a>
+        </li>
+    </ul>
+</nav>
+<!-- Segmento donde se muestran las subvistas de Series -->
+<section app-view-segment="1"></section>
