Ejemplo de eventos entre $scopes. Con $emit enviamos hacia arriba en la jerarquía de $scopes, y con $broadcast hacia abajo.

--- a/app/views/Pelis.html
+++ b/app/views/Pelis.html
@@ -6,5 +6,8 @@
         </li>
     </ul>
 </nav>
+
+<button ng-click="lanzarBroadcast()">Lanzar evento hacia abajo</button>
+
 <!-- Segmento donde se muestran las subvistas de Películas -->
 <section app-view-segment="1"></section>
