--- a/app/views/PelisProx.html
+++ b/app/views/PelisProx.html
@@ -1,3 +1,10 @@
-<h2>Próximas películas</h2>
 
-<button ng-click="lanzarEmit()">Lanzar evento hacia arriba</button>
+<table>
+    <tbody>
+        <!-- Con la directiva ng-repeat iteramos por un conjunto
+        de elementos -->
+        <tr ng-repeat="pelicula in peliculas">
+            <td>{{ pelicula.original_title }}</td>
+        </tr>
+    </tbody>
+</table>
