--- a/app/views/PelisProx.html
+++ b/app/views/PelisProx.html
@@ -1,4 +1,7 @@
 
+<!--Botón para probar diferidos-->
+<button ng-click="ejecutarPromesa()">Ejecutar Promesa</button>
+        
 <table>
     <tbody>
         <!-- Con la directiva ng-repeat iteramos por un conjunto
