--- a/app/views/PelisProx.html
+++ b/app/views/PelisProx.html
@@ -1,13 +1,13 @@
-
-<!--Botón para probar diferidos-->
-<button ng-click="ejecutarPromesa()">Ejecutar Promesa</button>
-        
-<table>
+<table class="table table-striped">
     <tbody>
         <!-- Con la directiva ng-repeat iteramos por un conjunto
         de elementos -->
         <tr ng-repeat="pelicula in peliculas">
+            <td>
+                <img ng-src="{{ obtenerRutaImagen(pelicula.backdrop_path) }}" />
+            </td>
             <td>{{ pelicula.original_title }}</td>
+            <td>{{ pelicula.release_date }}</td>
         </tr>
     </tbody>
 </table>
