--- a/app/views/PelisProx.html
+++ b/app/views/PelisProx.html
@@ -6,8 +6,21 @@
             <td>
                 <img ng-src="{{ obtenerRutaImagen(pelicula.backdrop_path) }}" />
             </td>
-            <td>{{ pelicula.original_title }}</td>
+            <td>
+                <a href="" ng-click="verDetalle(pelicula.id)">
+                    {{ pelicula.original_title }}
+                </a>
+            </td>
             <td>{{ pelicula.release_date }}</td>
         </tr>
     </tbody>
 </table>
+
+
+
+
+
+
+
+
+
