Hemos modificado la vista de detalle de película para mostrar su título y su imagen.

--- a/app/views/PeliDetalleCtrl.html
+++ b/app/views/PeliDetalleCtrl.html
@@ -1,1 +1,2 @@
-<h2>Detalle de la película</h2>
+<h2>{{ pelicula.original_title }}</h2>
+<img ng-src="{{ obtenerRutaImagen(pelicula.backdrop_path) }}" />
