Hemos añadido un $watch en un scope para que monitorice el valor de una variable. Cuando este valor cambia, se ejecuta la función callback que hemos definido como segundo parámetro del $watch.

--- a/app/views/ListItem.html
+++ b/app/views/ListItem.html
@@ -1,6 +1,9 @@
 
 <tr>
     <td>
+        <input type="checkbox" ng-model="miCheck" />
+    </td>
+    <td>
         <img ng-src="{{ obtenerRutaImagen(peli.poster_path) }}" />
     </td>
     <td>
